--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "Illuminate/Database": "^12.0"
+        "illuminate/database": "^12.0"
     },
     "autoload": {
         "psr-4": {
