--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "victormgomes/query-params",
     "description": "Automatic query parameters generation based on eloquent models",
-    "version": "dev-main",
+    "version": "0.0.1",
     "keywords": [
         "laravel",
         "query",
